# veyon

./: .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.old  INSTALL  Makefile.am  Makefile.in  Makefile.svn  README  README.md  SECURITY-NOTES.md  SECURITY.md  TODO  Vagrantfile  acinclude.m4  build_mingw32  build_mingw64  config.h.in  configure  configure.in  flake.nix  iTALC.nsi  iTALC.nsi.in  italc.spec.in  italcconfig.h.in  modules.nix  project.yml  tightvnc4win_integrate  tightvnc4win_italc.diff  tightvnc4win_italc.diff.new
cli/: CMakeLists.txt  veyon-cli.1  veyon-cli.rc.in  veyon-cliw.rc.in  veyon-wcli.rc.in
cli/data/: veyon-cli.exe.manifest.in  veyon-wcli.exe.manifest.in
cli/src/: ConfigCommands.cpp  ConfigCommands.h  FeatureCommands.cpp  FeatureCommands.h  PluginCommands.cpp  PluginCommands.h  PluginsCommands.cpp  PluginsCommands.h  ServiceControlCommands.cpp  ServiceControlCommands.h  ShellCommands.cpp  ShellCommands.h  main.cpp
common/: Makefile.am  Makefile.in
common/include/: debug.h  dsa_key.h  fast_qimage.h  isd_base.h  isd_connection.h  italc_rfb_ext.h  ivs_connection.h  local_system.h  messagebox.h  paths.h  progress_widget.h  qt_features.h  qt_user_events.h  rect_list.h  system_key_trapper.h  system_service.h
common/resources/: es.qm  es.ts  fr.qm  it.ts
common/src/: dsa_key.cpp  isd_base.cpp  isd_connection.cpp  ivs_connection.cpp  local_system.cpp  messagebox.cpp  progress_widget.cpp  rect_list.cpp  system_service.cpp
configurator/: CMakeLists.txt  italc-configurator.1  italc-configurator.qrc  italc-configurator.rc.in  veyon-configurator.1  veyon-configurator.qrc  veyon-configurator.rc.in
configurator/data/: io.veyon.veyon-configurator.policy.in  veyon-configurator.desktop.in  veyon-configurator.exe.manifest.in  veyon-configurator.icns  veyon-configurator.xpm
configurator/forms/: AccessControlPage.ui  AccessControlRuleEditDialog.ui  AccessControlRulesTestDialog.ui  AuthenticationConfigurationPage.ui  GeneralConfigurationPage.ui  KeyFileAssistant.ui  LdapConfigurationPage.ui  MainWindow.ui  MasterConfigurationPage.ui  ServiceConfigurationPage.ui
configurator/resources/: configurator.qrc
configurator/src/: AccessControlPage.cpp  AccessControlPage.h  AccessControlPage.ui  AccessControlRuleEditDialog.cpp  AccessControlRuleEditDialog.h  AccessControlRuleEditDialog.ui  AccessControlRuleListModel.cpp  AccessControlRuleListModel.h  AccessControlRulesTestDialog.cpp  AccessControlRulesTestDialog.h  AccessControlRulesTestDialog.ui  AuthenticationConfigurationPage.cpp  AuthenticationConfigurationPage.h  AuthenticationPage.cpp  AuthenticationPage.h  AuthenticationPage.ui  AuthenticationPageTab.cpp  AuthenticationPageTab.h  AuthenticationPageTab.ui  ConfigurationPage.h  ConfigurationTestController.cpp  ConfigurationTestController.h  ConfiguratorCore.cpp  ConfiguratorCore.h  FileSystemBrowser.cpp  FileSystemBrowser.h  GeneralConfigurationPage.cpp  GeneralConfigurationPage.h  GeneralConfigurationPage.ui  KeyDirectoriesPage.cpp  KeyDirectoriesPage.h  KeyFileAssistant.cpp  KeyFileAssistant.h  KeyFileAssistantModePage.cpp  KeyFileAssistantModePage.h  LdapConfigurationPage.cpp  LdapConfigurationPage.h  LogonAclSettings.h  MainWindow.cpp  MainWindow.h  (+16 more)
core/: CMakeLists.txt  builddata.qrc.in  core.qrc
core/dialogs/: AboutDialog.ui  PasswordDialog.ui  SmartCardDialog.ui
core/include/: AboutDialog.h  AccessControlDataBackendInterface.h  AccessControlDataBackendManager.h  AccessControlProvider.h  AccessControlRule.h  AuthenticationCredentials.h  AuthenticationManager.h  AuthenticationPluginInterface.h  AuthenticationProxy.h  BuiltinFeatures.h  CommandLineIO.h  CommandLinePluginInterface.h  Computer.h  ComputerControlInterface.h  ComputerListModel.h  ConfigurationManager.h  ConfigurationNetworkObjectDirectory.h  ConfigurationPage.h  ConfigurationPagePluginInterface.h  Cotire.h  CryptoCore.h  DesktopAccessDialog.h  DesktopAccessPermission.h  DsaKey.h  DummyAuthentication.h  EnumHelper.h  Feature.h  FeatureControl.h  FeatureInterface.h  FeatureManager.h  FeatureMessage.h  FeaturePluginInterface.h  FeatureProviderInterface.h  FeatureWorkerManager.h  FileSystemBrowser.h  Filesystem.h  HashList.h  HostAddress.h  InputDeviceBlocker.h  InternetAccessControlBackendInterface.h  (+90 more)
core/resources/: ar.ts  bb.ts  ca_ES.ts  core.qrc  cs.ts  de.ts  de_DE.ts  default-pkey.pem  el.ts  es.ts  es_ES.ts  fa.ts  fi.ts  fr.ts  he.ts  hu.ts  id_ID.ts  it.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  lt.ts  lv_LV.ts  mn.ts  nl.ts  nn.ts  no_NO.ts  pl.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ru.ts  sk.ts  sl.ts  sv.ts  tr.ts  uk.ts  veyon.ts  zh_CN.ts  zh_TW.ts
core/src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AccessControlDataBackendManager.cpp  AccessControlProvider.cpp  AccessControlProvider.h  AccessControlRule.cpp  AccessControlRule.h  AuthenticationCredentials.cpp  AuthenticationCredentials.h  BuiltinFeatures.h  (+175 more)
ctl/: CMakeLists.txt  italc-ctl.rc.in  veyon-ctl.1  veyon-ctl.rc.in
ica/: CMakeLists.txt  Makefile.am  Makefile.in  ica.1  ica.qrc  ica.rc.in
ima/: CMakeLists.txt  Makefile.am  Makefile.in  italc.1  italc.qrc  italc.rc.in
imc/: CMakeLists.txt  imc.1  imc.qrc  imc.rc.in
lib/: CMakeLists.txt  ItalcCore.qrc  Makefile.am  italc_core.qrc
master/: CMakeLists.txt  italc-master.1  italc-master.rc.in  master.qrc  veyon-master.1  veyon-master.rc.in
plugins/: CMakeLists.txt
server/: CMakeLists.txt  veyon-server.1  veyon-server.rc.in
service/: CMakeLists.txt  italc-service.1  italc-service.rc.in  veyon-service.1  veyon-service.rc.in  veyon.service.in
setup/: Makefile.am  setup.qrc  setup.rc.in
translations/: CMakeLists.txt  ar.ts  ca_ES.ts  cs.ts  de.ts  de_DE.ts  el.ts  es_ES.ts  fa.ts  fi.ts  fr.ts  he.ts  hu.ts  id.ts  id_ID.ts  it.ts  it_IT.ts  ja.ts  ja_JP.ts  ko.ts  ko_KR.ts  lt.ts  lv.ts  lv_LV.ts  mn.ts  nl.ts  nn.ts  no_NO.ts  pl.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ru.ts  sk.ts  sl.ts  sr.ts  sv.ts  th.ts  tr.ts  uk.ts  (+40 more)
worker/: CMakeLists.txt  italc-worker.rc.in  veyon-worker.1  veyon-worker.rc.in
(+2581 files in other folders)
